[package]
name = "thrussh-config"
description = "Utilities to parse .ssh/config files, including helpers to implement ProxyCommand in Thrussh."
version = "0.1.2"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
include = [ "Cargo.toml", "src/lib.rs", "src/proxy.rs" ]
license = "Apache-2.0"
documentation = "https://docs.rs/thrussh-config"
repository = "https://nest.pijul.com/pijul_org/thrussh"

[dependencies]
futures = "0.1"
tokio = "0.1"
thrussh = "0.21"
regex = "1.0"
lazy_static = "1.0"
log = "0.4"
dirs = "1.0"
