[package]
name = "thrussh"
description = "A client and server SSH library."
keywords = ["ssh"]
version = "0.21.2"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
repository = "https://nest.pijul.com/pijul_org/thrussh"
homepage = "https://pijul.org/thrussh"
documentation = "https://docs.rs/thrussh"
license = "Apache-2.0"
include = [
        "Cargo.toml",
        "src/auth.rs",
        "src/kex.rs",
        "src/key.rs",
        "src/lib.rs",
        "src/msg.rs",
        "src/negotiation.rs",
        "src/pty.rs",
        "src/session.rs",
        "src/sshbuffer.rs",
        "src/ssh_read.rs",
        "src/tcp.rs",
        "src/bin/client.rs",
        "src/bin/server.rs",
        "src/cipher/chacha20poly1305.rs",
        "src/cipher/clear.rs",
        "src/cipher/mod.rs",
        "src/client/mod.rs",
        "src/client/encrypted.rs",
        "src/client/authenticate.rs",
        "src/client/channel_open.rs",
        "src/client/connection.rs",
        "src/client/data.rs",
        "src/client/kex.rs",
        "src/client/session.rs",
        "src/client/wait.rs",
        "src/server/mod.rs",
        "src/server/encrypted.rs",
        "src/server/connection.rs",
        "src/server/kex.rs",
        "src/server/session.rs",
        "src/sodium.rs",
        "src/read_exact_from.rs"
        ]

[dependencies]
byteorder = "1.2"
bitflags = "1.0"
log = "0.4"
thrussh-keys = "0.11.3"
openssl = "0.10"
thrussh-libsodium = "0.1"
cryptovec = "0.4.1"
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1"

[dev-dependencies]
env_logger = "0.5"
